onclick Change img

--- a/Practice.html
+++ b/Practice.html
@@ -6,8 +6,30 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!-- onclick change img  -->
+    <!-- <input type="button" onclick="changeIng()" id="btn" value="On">
+
+    <img id="myImg" src="https://www.w3schools.com/js/pic_bulboff.gif" style="width:100px"> -->
+
     <script>
-        console.log("HELLO !");
+
+        // console.log("HELLO !");
+
+        // onclick img change 
+/*         function changeIng(){
+            let val = document.getElementById("btn").value;
+
+            if( val == "On"){
+                document.getElementById("myImg").src = "https://www.w3schools.com/js/pic_bulbon.gif";
+                document.getElementById("btn").value = "Off";
+            }else{
+                document.getElementById("myImg").src = "https://www.w3schools.com/js/pic_bulboff.gif";
+                document.getElementById("btn").value = "On";
+            }
+        } */
+
+        
     </script>
 </body>
 </html>
