--- a/Practice.html
+++ b/Practice.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <!-- onclick change img  -->
     <!-- <input type="button" onclick="changeIng()" id="btn" value="On">
 
     <img id="myImg" src="https://www.w3schools.com/js/pic_bulboff.gif" style="width:100px"> -->
 
     <script>
+      // console.log("HELLO !");
 
-        // console.log("HELLO !");
-
-        // onclick img change 
-/*         function changeIng(){
+      // onclick img change
+      /*       function changeIng(){
             let val = document.getElementById("btn").value;
 
             if( val == "On"){
@@ -29,7 +27,27 @@
             }
         } */
 
-        
+      // variables - var
+      /*       var x = 2; // Now x is 2
+
+      var x = 3; // Now x is 3 */
+
+      //variables - let
+/*       var x = 2; // Allowed
+      let x = 3; // Not allowed
+
+      {
+        let x = 2; // Allowed
+        let x = 3; // Not allowed
+      }
+
+      {
+        let x = 2; // Allowed
+        var x = 3; // Not allowed
+      } */
+
+
+      
     </script>
-</body>
+  </body>
 </html>
